# patina-dxe-core-qemu

./: Cargo.toml
src/q35/component/service/: smbios_platform.rs
