[package]
name = "qemu_dxe_core"
version = "2.1.1"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "qemu_q35_dxe_core"
path = "bin/q35_dxe_core.rs"
required-features = ["x64"]

[[bin]]
name = "qemu_sbsa_dxe_core"
path = "bin/sbsa_dxe_core.rs"
required-features = ["aarch64"]

[lib]
name = "qemu_resources"
path = "src/lib.rs"

[dependencies]
log = { version = "^0.4", default-features = false, features = [
    "release_max_level_warn",
] }
#patina_adv_logger = { version = "16" }
#patina_debugger = { version = "16" }
#patina_dxe_core = { version = "16" }
#patina_mm = { version = "16" }
#patina_performance = { version = "16"}
#patina_samples = { version = "16" }
#patina = { version = "16", features = ["enable_patina_tests"] }
#patina_ffs_extractors = { version = "16" }
#patina_stacktrace = { version = "16" }

#patina_adv_logger = { path = "../patina/components/patina_adv_logger" }
#patina_debugger = { path = "../patina/core/patina_debugger" }
#patina_dxe_core = { path = "../patina/patina_dxe_core" }
#patina_mm = { path = "../patina/components/patina_mm" }
#patina_performance = { path = "../patina/components/patina_performance" }
#patina_samples = { path = "../patina/components/patina_samples" }
#patina = { path = "../patina/sdk/patina", features = ["enable_patina_tests"] }
#patina_smbios = { path = "../patina/components/patina_smbios" }
#patina_ffs_extractors = { path = "../patina/sdk/patina_ffs_extractors" }
#patina_stacktrace = { path = "../patina/core/patina_stacktrace" }

patina_adv_logger = { path = "../patina-anh-fork/components/patina_adv_logger" }
patina_debugger = { path = "../patina-anh-fork/core/patina_debugger" }
patina_dxe_core = { path = "../patina-anh-fork/patina_dxe_core" }
patina_mm = { path = "../patina-anh-fork/components/patina_mm" }
patina_performance = { path = "../patina-anh-fork/components/patina_performance" }
patina_samples = { path = "../patina-anh-fork/components/patina_samples" }
patina = { path = "../patina-anh-fork/sdk/patina", features = ["enable_patina_tests"] }
patina_smbios = { path = "../patina-anh-fork/components/patina_smbios" }
patina_ffs_extractors = { path = "../patina-anh-fork/sdk/patina_ffs_extractors" }
patina_stacktrace = { path = "../patina-anh-fork/core/patina_stacktrace" }
patina_macro = { path = "../patina-anh-fork/sdk/patina_macro" }

r-efi = { version = "^5", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false, features = [
  "instructions"
], optional = true }
zerocopy = { version = "0.8", features = ["derive"] }

# These release settings reduce the qemu binary size significantly(~35%).
[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
split-debuginfo = "packed"
strip = "symbols"
incremental = true

[profile.dev]
opt-level = "s"

[profile.test]
opt-level = 0

[features]
default = ["compatibility_mode_allowed"]
compatibility_mode_allowed = ["patina_dxe_core/compatibility_mode_allowed"]
x64 = ["x86_64"]
aarch64 = []
doc = []
std = []
build_debugger = []
enable_debugger = ["build_debugger"]
